variants/v08/TASK.md
# Вариант 08. «Генератор отчётов»

Сервис строит текстовые отчёты по XML-документам. В образе есть Java-модуль экспорта в PDF. Go-часть определяет форматы архивов и очищает HTML.

Вы — инженер по безопасности. Перед выводом сервиса в продуктивную среду нужно провести анализ
состава ПО, оценить найденные уязвимости и довести образы до прохождения security gate.
Общий порядок работы описан в [README.md](../../README.md), здесь — только особенности варианта.

## Состав

| Компонент | Каталог | Образ |
|---|---|---|
| Python-сервис | `python-app/` | `lab4/v08-py:before` |
| Go-сервис | `go-app/` | `lab4/v08-go:before` |

## Сборка исходных образов

```bash
cp -r variants/v08 ~/lab4-<фамилия>-v08 && cd ~/lab4-<фамилия>-v08
mkdir -p sbom scans
docker build -t lab4/v08-py:before python-app
docker build -t lab4/v08-go:before go-app
```

## Что нужно сделать

Подробные инструкции и примеры команд — в разделе 2 [методички](../../README.md#2-порядок-выполнения).

- [ ] Скопировать каталог варианта и собрать исходные образы (команды выше).
- [ ] **Часть 1.** Построить SBOM обоих образов в форматах syft-json, CycloneDX и SPDX; посчитать компоненты
      по типам; сравнить SBOM исходников и образа; извлечь Go-бинарь и построить SBOM по нему; сравнить слои.
- [ ] **Часть 2.** Просканировать оба SBOM grype, сохранить JSON-отчёты, составить сводку находок.
- [ ] **Часть 3.** Составить топ-10 уязвимостей по RISK для каждого образа, разобрать три уязвимости.
- [ ] **Часть 4.** Исправить `python-app/` и `go-app/`; собрать `lab4/v08-py:after` и `lab4/v08-go:after`
      без исправимых High/Critical; убедиться, что оба сервиса отвечают на `GET /health`; описать остаточный
      риск и заполнить `.grype.yaml`.
- [ ] **Часть 5.** Написать `scan.sh` и показать, что он не пропускает `:before` и пропускает `:after`.
- [ ] **Часть 6.** Ответить на индивидуальные вопросы (ниже).
- [ ] Оформить `REPORT.md` по шаблону и сдать каталог (структура — в разделе 3 методички).

## Индивидуальные вопросы

Ответы оформите в разделе 6 отчёта. Каждое утверждение подтверждайте командой и её выводом (фрагментом).

1. Найдите в Python-образе уязвимость из каталога KEV, относящуюся к пакету ОС. Что это за уязвимость и каковы условия эксплуатации? Эксплуатируема ли она в этом контейнере? Обоснуйте.
2. Для модуля github.com/mholt/archiver/v3 grype не предлагает исправленной версии. Почему? Как устранить уязвимости, если исправления не будет?
3. Уязвимость Text4Shell в commons-text часто сравнивают с Log4Shell. Сравните их CVSS-векторы, EPSS и наличие в KEV. Почему оценки так различаются?
