variants/v09/TASK.md
# Вариант 09. «Каталог книг»

Каталог книг с загрузкой метаданных из внешних источников. Собирается на Alpine. Фронтенд использует шаблоны. Go-часть — API на gin.

Вы — инженер по безопасности. Перед выводом сервиса в продуктивную среду нужно провести анализ
состава ПО, оценить найденные уязвимости и довести образы до прохождения security gate.
Общий порядок работы описан в [README.md](../../README.md), здесь — только особенности варианта.

## Состав

| Компонент | Каталог | Образ |
|---|---|---|
| Python-сервис | `python-app/` | `lab4/v09-py:before` |
| Go-сервис | `go-app/` | `lab4/v09-go:before` |

## Сборка исходных образов

```bash
cp -r variants/v09 ~/lab4-<фамилия>-v09 && cd ~/lab4-<фамилия>-v09
mkdir -p sbom scans
docker build -t lab4/v09-py:before python-app
docker build -t lab4/v09-go:before go-app
```

## Что нужно сделать

Подробные инструкции и примеры команд — в разделе 2 [методички](../../README.md#2-порядок-выполнения).

- [ ] Скопировать каталог варианта и собрать исходные образы (команды выше).
- [ ] **Часть 1.** Построить SBOM обоих образов в форматах syft-json, CycloneDX и SPDX; посчитать компоненты
      по типам; сравнить SBOM исходников и образа; извлечь Go-бинарь и построить SBOM по нему; сравнить слои.
- [ ] **Часть 2.** Просканировать оба SBOM grype, сохранить JSON-отчёты, составить сводку находок.
- [ ] **Часть 3.** Составить топ-10 уязвимостей по RISK для каждого образа, разобрать три уязвимости.
- [ ] **Часть 4.** Исправить `python-app/` и `go-app/`; собрать `lab4/v09-py:after` и `lab4/v09-go:after`
      без исправимых High/Critical; убедиться, что оба сервиса отвечают на `GET /health`; описать остаточный
      риск и заполнить `.grype.yaml`.
- [ ] **Часть 5.** Написать `scan.sh` и показать, что он не пропускает `:before` и пропускает `:after`.
- [ ] **Часть 6.** Ответить на индивидуальные вопросы (ниже).
- [ ] Оформить `REPORT.md` по шаблону и сдать каталог (структура — в разделе 3 методички).

## Индивидуальные вопросы

Ответы оформите в разделе 6 отчёта. Каждое утверждение подтверждайте командой и её выводом (фрагментом).

1. В Dockerfile Python-сервиса компилятор устанавливается и затем удаляется. Сравните apk-пакеты в SBOM с `--scope squashed` и `--scope all-layers`. Сколько пакетов ОС и уязвимостей «прячется» в промежуточном слое? Как правильно собирать C-расширения (подсказка: multi-stage или одна инструкция RUN)?
2. Оба образа основаны на Alpine с истёкшим сроком поддержки. Как grype сообщает об этом? Почему в колонке FIXED IN у пакетов apk пусто?
3. Найдите в отчёте пакеты, которые попали в образ транзитивно (не указаны явно ни в requirements.txt, ни в package.json). Приведите по одному примеру для каждой экосистемы и объясните, как SBOM помогает с такими зависимостями.
